k8s-deploy/vote-app/db-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: db-app-deploy
   labels:
     app: db-app-deploy
spec:
  replicas: 1
  selector:
   matchLabels:
     app: db-app
     type: backend
  template:
    metadata:
       name: db-app
       labels:
         app: db-app
         type: backend
    spec:
      containers:
        - name: db-app-container
          image: postgres
          ports:
          - containerPort: 5432
