k8s-deploy/vote-app/result-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: result-app-deploy
   labels:
     app: result-app-deploy
spec:
  replicas: 1
  selector:
   matchLabels:
     app: result-app
     type: frontend
  template:
    metadata:
       name: result-app
       labels:
         app: result-app
         type: frontend
    spec:
      containers:
        - name: result-app-container
          image: vsiraparapu/result-app
          ports:
          - containerPort: 80
