k8s-deploy/vote-app/vote-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: vote-app-deploy
   labels:
     app: vote-app-deploy
spec:
  replicas: 1
  selector:
   matchLabels:
     app: vote-app
     type: frontend
  template:
    metadata:
       name: vote-app
       labels:
         app: vote-app
         type: frontend
    spec:
      containers:
        - name: vote-app-container
          image: vsiraparapu/voting-app
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 150Mi
