k8s-deploy/vote-app/db-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: db
    labels:
      app: db
      type: backend
spec:
    type: ClusterIP
    selector: 
      app: db-app
      type: backend
    ports:
     - port: 5432
       targetPort: 5432
