k8s-deploy/vote-app/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: redis
    labels:
      app: redis
      type: backend
spec:
    type: ClusterIP
    selector: 
      app: redis-app
     type: backend
    ports:
     - port: 6379
       targetPort: 6379
