k8s-deploy/vote-app/result-app-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: result-app-svc
    labels:
      app: result-app-svc
      type: frontend
spec:
    type: NodePort
    selector: 
      app: result-app
      type: frontend
    ports:
     - port: 80
       targetPort: 80
       nodePort: 30016
