k8s-deploy/vote-app/vote-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: 683b06656b1c.mylabserver.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-app-svc
            port:
              number: 80
